/* 
  Localizable.strings
  PhotographySchoolLessonApp

  Created by Ahmed Mohiy on 27/01/2023.
  
*/

//MARK: - LessonListView
"screen_title" = "Lessons";

//MARK: - LessonDetails
"lesson_details_download" = "Download";
"lesson_details_remove" = "Remove";
"lesson_details_downloading" = "Downloading...";
"lesson_details_next_lesson" = "Next lesson";
